--- a/src/Blazor-WebDAV-AudioPlayer/Pages/_Host.cshtml
+++ b/src/Blazor-WebDAV-AudioPlayer/Pages/_Host.cshtml
@@ -13,8 +13,11 @@
     <title>Blazor-WebDAV-AudioPlayer</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/site.css"  />
+    <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="css/Tree.css" />
+
+    <link rel="stylesheet" href="lib/dx-blazor/dx-blazor.css" />
+    <script src="lib/dx-blazor/dx-blazor.js"></script>
 </head>
 <body>
     <app>
