--- a/src/Blazor-WebDAV-AudioPlayer/_Imports.razor
+++ b/src/Blazor-WebDAV-AudioPlayer/_Imports.razor
@@ -9,3 +9,4 @@
 @using Blazor.WebDAV.AudioPlayer.Options
 @using Blazor.WebDAV.AudioPlayer.Pages
 @using Blazor.WebDAV.AudioPlayer.TreeComponent
+@using DevExpress.Blazor;
