--- a/src/Blazor-WebDAV-AudioPlayer/Shared/NavMenu.razor
+++ b/src/Blazor-WebDAV-AudioPlayer/Shared/NavMenu.razor
@@ -12,16 +12,11 @@
                 <span class="oi oi-musical-note" aria-hidden="true"></span> Music
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="info">
+                <span class="oi oi-info" aria-hidden="true"></span> Info
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>*@
     </ul>
 </div>
 
