--- a/src/Blazor-WebDAV-AudioPlayer/Pages/_Host.cshtml
+++ b/src/Blazor-WebDAV-AudioPlayer/Pages/_Host.cshtml
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="css/Tree.css" />
 
-    <link rel="stylesheet" href="lib/dx-blazor/dx-blazor.css" />
-    <script src="lib/dx-blazor/dx-blazor.js"></script>
+    @*<link rel="stylesheet" href="lib/dx-blazor/dx-blazor.css" />
+    <script src="lib/dx-blazor/dx-blazor.js"></script>*@
 </head>
 <body>
     <app>
