--- a/src/Blazor-WebDAV-AudioPlayer/TreeComponent/Tree.razor
+++ b/src/Blazor-WebDAV-AudioPlayer/TreeComponent/Tree.razor
@@ -4,7 +4,7 @@
 
     @foreach (var treeNode in ResourceItems ?? Enumerable.Empty<TreeNode<ResourceItem>>())
     {
-        bool selected = treeNode.Equals(SelectedNode);
+        // bool selected = treeNode.Equals(SelectedNode);
 
         <div>
             @if (treeNode.Item.IsCollection)
@@ -15,7 +15,7 @@
             }
 
             <div class="uic-tree__title">
-                <span class="@Style.NodeTitleClass @(selected ? Style.NodeTitleSelectedClass : "")" @onclick="@(async () => await OnSelectNode(treeNode))">
+                <span class="@Style.NodeTitleClass @(treeNode.Item.FullPath == SelectedNode?.Item.FullPath ? Style.NodeTitleSelectedClass : "")" @onclick="@(async () => await OnSelectNode(treeNode))">
                     @TitleTemplate(treeNode)
                 </span>
             </div>
@@ -66,8 +66,8 @@
 
     private async Task OnSelectNode(TreeNode<ResourceItem> treeNode)
     {
-        await SelectedNodeChanged.InvokeAsync(treeNode);
-
         SelectedNode = treeNode;
+
+        await SelectedNodeChanged.InvokeAsync(treeNode);
     }
 }
