--- a/src/Blazor-WebDAV-AudioPlayer.v2/Pages/_Host.cshtml
+++ b/src/Blazor-WebDAV-AudioPlayer.v2/Pages/_Host.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/Tree.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.core.min.js" integrity="sha256-q2vnVvwrx3RbYXPyAwx7c2npmULQg2VdCXBoJ5+iigs=" crossorigin="anonymous"></script>
-    <script src="JsInteropHowl.js"></script>
+    <script src="_content/Howler.Blazor/JsInteropHowl.js"></script>
 </head>
 <body>
     <app>
