--- a/src/Blazor-WebDAV-AudioPlayer.v2/Shared/NavMenu.razor
+++ b/src/Blazor-WebDAV-AudioPlayer.v2/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-info" aria-hidden="true"></span> Info
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="example">
+                <span class="oi oi-code" aria-hidden="true"></span> Example
+            </NavLink>
+        </li>
     </ul>
 </div>
 
